# cmake-cuda-separate-compilation-linking

./: .gitignore  CMakeLists.txt  LICENSE  README.md
with-separate/: CMakeLists.txt  dummy.cpp  main.cu
with-separate/lib/: v3.cu  v3.cuh
without-separate/: CMakeLists.txt  main.cu  particle.cuh  particleImpl.cuh
